tests/backend/checkmach/fail4.output
File "fail4.ml", line 2, characters 26-40:
Error: Annotation check for noalloc_strict failed on function camlFail4__test_51
